Created example controller.

--- a/src/main/resources/static/gameform.html
+++ b/src/main/resources/static/gameform.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Select Expansion:</h1>
-	<form action="/generategame" method="get">
+	<form action="/randomize" method="get">
 		<input type="radio" id="dominion" name="expansion" value="dominion">
 		<label for="dominion">Dominion (Base Game)</label><br>
 		<input type="radio" id="intrigue" name="expansion" value="intrigue">
