Started RESTful controller for expansion object.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,8 @@
     <div>
         <h1>Welcome to Harbinger!</h1><br>
         <p>Harbinger is a simple web app that allows you to randomize your Dominion games without all the work of using the randomizer deck. Enjoy!</p><br>
-        <p>Get started <a href="/gameform.html">here</a></p>
+        <p>Get started <a href="/gameform.html">here</a></p><br>
+        <p>See <a href="/expansions">expansions</a></p><br>
     </div>
 </body>
 </html>
