--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Harbinger</title>
+    <!--  <script>(async () => {
+    	  const rawResponse = await fetch('http://localhost:8080/expansion', {
+    		    method: 'POST',
+    		    headers: {
+    		      'Accept': 'application/json',
+    		      'Content-Type': 'application/json'
+    		    },
+    		    body: JSON.stringify({"name":"test2","flavor":"testflavor2","mechanics":"testmechanic2"})
+    		  });
+    		  const content = await rawResponse.json();
+
+    		  console.log(content);
+    		})();
+    </script> -->
 </head>
 <body>
     <div>
